--- a/rules.html
+++ b/rules.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title>Rock, Paper, Scissors - Client</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="public/styles/style.css" />
 </head>
 
 <body>
   <div id="header">
-    <h1>Rock, Paper, Scissors <img src="images/rpsLogo.jpg" alt="RPS Logo" height="50" width="50"></h1>
+    <h1>Rock, Paper, Scissors <img src="public/images/rpsLogo.jpg" alt="RPS Logo" height="50" width="50"></h1>
   </div>
   <div id="rules">
     <h2>Rules</h2>
@@ -34,5 +34,5 @@
   <footer>
     Tyler Masuyama - November 2018
   </footer>
-  <script src="scripts_rules.js"></script>
+  <script src="public/scripts/scripts_rules.js"></script>
 </body>
