--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <title>Rock, Paper, Scissors - Client</title>
-  <link rel="stylesheet" type="text/css" href="public/styles/style.css" />
+  <link rel="stylesheet" type="text/css" href="styles/style.css" />
 </head>
 
 <body>
   <div id="header">
-    <h1>Rock, Paper, Scissors <img src="public/images/rpsLogo.jpg" alt="RPS Logo" height="50" width="50"></h1>
+    <h1>Rock, Paper, Scissors <img src="images/rpsLogo.jpg" alt="RPS Logo" height="50" width="50"></h1>
   </div>
 
 
@@ -65,7 +65,7 @@
   <footer>
     Tyler Masuyama - November 2018
   </footer>
-  <script src="public/scripts/scripts.js"></script>
+  <script src="scripts/scripts.js"></script>
 </body>
 
 </html>
