--- a/stats.html
+++ b/stats.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title>Rock, Paper, Scissors - Client</title>
-  <link rel="stylesheet" type="text/css" href="public/styles/style.css" />
+  <link rel="stylesheet" type="text/css" href="styles/style.css" />
 </head>
 
 <body>
   <div id="header">
-    <h1>Rock, Paper, Scissors <img src="public/images/rpsLogo.jpg" alt="RPS Logo" height="50" width="50"></h1>
+    <h1>Rock, Paper, Scissors <img src="images/rpsLogo.jpg" alt="RPS Logo" height="50" width="50"></h1>
   </div>
   <div id="stats">
     <h2><span class="player_name_span"></span>'s Game Stats</h2>
@@ -95,5 +95,5 @@
   <footer>
     Tyler Masuyama - November 2018
   </footer>
-  <script src="public/scripts/scripts_stats.js"></script>
+  <script src="scripts/scripts_stats.js"></script>
 </body>
